# ExcelAddin

./: .gitignore  APPLICATION_GUIDE.md  BUNDLE_OPTIMIZATION.md  CERTIFICATE_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAYBOOK.md  PACKAGE_UPDATES.md  README.md  TECHNICAL_GUIDE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_GUIDE-BACKUP.md  TROUBLESHOOTING_GUIDE.md  commands.html  fix-certificates.js  fix-certificates.ps1  generate-certs.sh  index.html  manifest-prod.xml  manifest-staging.xml  manifest.xml  package-lock.json  package.json  prepare-deployment.sh  server.cjs  server.js  service.cjs  service.js  setup.sh  taskpane.html  tsconfig.json  vite.config.mjs  vite.config.ts  webpack.config.js  webpack.prod.config.js
backend/: .env.development  .env.example  .env.production  .env.staging  CERTIFICATE_SETUP.md  LIBRARY_UPGRADE_NOTES.md  README.md  app.py  database-production.cfg  database-staging.cfg  database.cfg  pyproject.toml  requirements.txt  run.py  service_wrapper.py  test_structure.py  web.config  wsgi_app.py
backend/certificates/: .gitignore  README.md  nifi-ca-cert.pem.example  nifi-client-cert.pem.example  nifi-client-key.pem.example
backend/src/application/dtos/: data_dtos.py
backend/src/application/services/: market_data_service.py  raw_data_service.py
backend/src/domain/entities/: market_data.py  raw_data.py
backend/src/domain/repositories/: market_data_repository.py  raw_data_repository.py
backend/src/infrastructure/config/: app_config.py  fund_mappings.py
backend/src/infrastructure/database/: db_manager.py  mock_repositories.py  (+2 more)
(+98 files in other folders)
